--- a/BarBot/Droid/Resources/layout/DrinkMenu.axml
+++ b/BarBot/Droid/Resources/layout/DrinkMenu.axml
@@ -2,21 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-	android:gravity="bottom"
-  	android:orientation="vertical"
-  	android:id="@+id/container">
-    <GridView xmlns:android="http://schemas.android.com/apk/res/android" 
-	    android:id="@+id/gridview"
-	    android:layout_width="fill_parent" 
-	    android:layout_height="fill_parent"
-	    android:numColumns="2"
-	    android:verticalSpacing="10dp"
-	    android:horizontalSpacing="10dp"
-	    android:gravity="center"
-		android:paddingTop="20dp"
-		android:paddingBottom="20dp"
-		android:clipToPadding="false"
-		android:scrollbarStyle="outsideOverlay"
-    	android:verticalScrollbarPosition="right"
-    	android:scrollbars="vertical" />
+    android:gravity="bottom"
+    android:orientation="vertical"
+    android:id="@+id/container" >
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/ToolBar" />
+    <GridView
+        android:id="@+id/gridview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:numColumns="2"
+        android:verticalSpacing="10dp"
+        android:horizontalSpacing="10dp"
+        android:gravity="center"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
+        android:clipToPadding="false"
+        android:scrollbarStyle="outsideOverlay"
+        android:verticalScrollbarPosition="right"
+        android:scrollbars="vertical" />
 </LinearLayout>
