--- a/BarBot/Droid/Resources/layout/DrinkDetail.axml
+++ b/BarBot/Droid/Resources/layout/DrinkDetail.axml
@@ -2,20 +2,33 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="bottom"
+    android:gravity="top"
     android:orientation="vertical"
     android:id="@+id/container" >
 	<include
         android:id="@+id/toolbar"
         layout="@layout/ToolBar" />
+	<RelativeLayout
+		android:layout_width="match_parent"
+		android:layout_height="195dp"
+		android:paddingTop="10dp"
+		android:paddingBottom="10dp" >
+	    <include
+			android:id="@+id/hexagon"
+			layout="@layout/Hexagon" />
+	</RelativeLayout>
+	<ListView
+      android:id="@+id/ingredient_listview"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+	  android:layout_weight="1" 
+	  android:divider="@color/actionbar_gray"/>
 	<Switch android:id="@+id/iceswitch"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" 
-		    android:layout_weight="1" />
+            android:layout_height="wrap_content" />
 	<Switch android:id="@+id/garnishswitch"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-			android:layout_weight="1" />
+            android:layout_height="wrap_content" />
 	<Button
         android:id="@+id/orderbutton"
         android:layout_width="fill_parent"
