--- a/BarBot/Droid/Resources/layout/hexagon.xml
+++ b/BarBot/Droid/Resources/layout/hexagon.xml
@@ -3,6 +3,7 @@
     android:id="@+id/hexagon_layout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+	android:layout_centerHorizontal="true"
     android:padding="5dp">
     <ImageView
         android:id="@+id/hexagon_tile"
@@ -29,7 +30,9 @@
         android:id="@+id/hexagon_recipe_name"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+		android:textSize="20dp"
         android:gravity="center"
         android:layout_centerVertical="true"
-        android:textColor="@color/text_white" />
+        android:textColor="@color/text_white" 
+		fontPath="fonts/Microsoft-Yi-Baiti.ttf" />
 </RelativeLayout>
