--- a/BarBot/Droid/Resources/layout/NameDialogFragment.xml
+++ b/BarBot/Droid/Resources/layout/NameDialogFragment.xml
@@ -6,11 +6,14 @@
     <EditText
         android:id="@+id/user_name"
         android:inputType="text"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+		android:layout_centerHorizontal="true"
+		android:gravity="center"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
+		android:background="@color/actionbar_gray"
         android:hint="@string/hint_name_alert" />
 </LinearLayout>
