--- a/BarBot/Droid/Resources/layout/DrinkDetail.axml
+++ b/BarBot/Droid/Resources/layout/DrinkDetail.axml
@@ -22,14 +22,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:divider="@color/actionbar_gray" />
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:divider="@color/actionbar_gray"
+        android:dividerHeight="1dip" />
     <RelativeLayout
         android:id="@+id/switchcontainer"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginRight="@dimen/detail_margin"
-        android:layout_marginLeft="@dimen/detail_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:gravity="center">
         <Switch
             android:id="@+id/iceswitch"
@@ -54,7 +56,7 @@
             android:theme="@style/BarBotTheme_Switch" />
         <Button
             android:id="@+id/garnishbutton"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/garnishswitch"
             android:gravity="left|center_vertical"
@@ -63,7 +65,7 @@
     </RelativeLayout>
     <Button
         android:id="@+id/orderbutton"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/title_order_button"
         style="@style/BarBotTheme_OrderButton" />
