--- a/BarBot/Droid/Resources/layout/ListViewRow.axml
+++ b/BarBot/Droid/Resources/layout/ListViewRow.axml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/listview_row"
-    android:layout_width="wrap_content"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:textColor="@color/text_white"
-    android:textSize="23dp"
-	fontPath="fonts/Microsoft-Yi-Baiti.ttf"/>
+    android:textSize="26dp"
+    android:paddingLeft="10dp"
+    android:paddingTop="7dp"
+    android:paddingBottom="7dp"
+    fontPath="fonts/Microsoft-Yi-Baiti.ttf" />
