--- a/BarBot/Droid/Resources/layout/DrinkDetail.axml
+++ b/BarBot/Droid/Resources/layout/DrinkDetail.axml
@@ -29,10 +29,10 @@
         android:id="@+id/switchcontainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
         <Switch
             android:id="@+id/iceswitch"
             android:layout_width="wrap_content"
@@ -56,7 +56,7 @@
             android:theme="@style/BarBotTheme_Switch" />
         <Button
             android:id="@+id/garnishbutton"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/garnishswitch"
             android:gravity="left|center_vertical"
