--- a/BarBot/Droid/Resources/layout/Hexagon.axml
+++ b/BarBot/Droid/Resources/layout/Hexagon.axml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/hexagon_layout"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-	android:layout_centerHorizontal="true"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_centerHorizontal="true"
     android:padding="5dp">
     <ImageView
         android:id="@+id/hexagon_tile"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:adjustViewBounds="true"
         android:layout_centerHorizontal="true"
         android:src="@drawable/hexagontile" />
     <ImageView
         android:id="@+id/hexagon_drink_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:maxHeight="100dp"
         android:scaleType="fitCenter"
         android:layout_centerHorizontal="true" />
     <ImageView
         android:id="@+id/hexagon_tile_gradient"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:adjustViewBounds="true"
         android:layout_centerHorizontal="true"
         android:src="@drawable/hexagontilegradient" />
@@ -30,9 +30,9 @@
         android:id="@+id/hexagon_recipe_name"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-		android:textSize="20dp"
+        android:textSize="20dp"
         android:gravity="center"
         android:layout_centerVertical="true"
-        android:textColor="@color/text_white" 
-		fontPath="fonts/Microsoft-Yi-Baiti.ttf" />
+        android:textColor="@color/text_white"
+        fontPath="fonts/Microsoft-Yi-Baiti.ttf" />
 </RelativeLayout>
