added Ingredient dialog, finished username dialog, added progress bar to GridView

--- a/BarBot/Droid/Resources/layout/NameDialogFragment.axml
+++ b/BarBot/Droid/Resources/layout/NameDialogFragment.axml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
     <EditText
         android:id="@+id/user_name"
-        android:inputType="text"
+        android:inputType="textCapSentences"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -15,5 +15,6 @@
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
         android:background="@color/actionbar_gray"
-        android:hint="@string/hint_name_alert" />
+        android:hint="@string/hint_name_alert"
+		android:imeOptions="actionDone" />
 </LinearLayout>
