--- a/BarBot/Droid/Resources/layout/DrinkDetail.axml
+++ b/BarBot/Droid/Resources/layout/DrinkDetail.axml
@@ -66,7 +66,7 @@
     <Button
         android:id="@+id/orderbutton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="65dp"
         android:text="@string/title_order_button"
         style="@style/BarBotTheme_OrderButton" />
 </LinearLayout>
