--- a/BarBot/Droid/Resources/layout/IngredientDialogFragment.axml
+++ b/BarBot/Droid/Resources/layout/IngredientDialogFragment.axml
@@ -2,21 +2,48 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:gravity="top"
+    android:orientation="vertical"
+    android:id="@+id/ingredientDialogContainer">
     <Spinner
         android:id="@+id/ingredientspinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-		android:layout_centerHorizontal="true"
+        android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:layout_margin="4dp"
+		android:layout_marginTop="10dp"
+        android:layout_marginRight="@dimen/dialog_horizontal_margin"
+        android:layout_marginLeft="@dimen/dialog_horizontal_margin"
+		android:layout_marginBottom="10dp"
+        android:textSize="@dimen/dialog_text_size"
         android:prompt="@string/ingredient_prompt" />
-    <Spinner
-        android:id="@+id/quantityspinner"
+    <RelativeLayout
+        android:id="@+id/quantitycontainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-		android:layout_centerHorizontal="true"
+        android:layout_marginRight="@dimen/dialog_horizontal_margin"
+        android:layout_marginLeft="@dimen/dialog_horizontal_margin"
         android:gravity="center"
-        android:layout_margin="4dp"
-        android:prompt="@string/quantity_prompt" />
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/quantityTextView"
+            android:layout_width="200dp"
+            android:layout_height="45dp"
+            android:textSize="@dimen/dialog_text_size"
+            android:layout_centerVertical="true" />
+        <Button
+            android:id="@+id/quantityDecrementButton"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_toRightOf="@+id/quantityTextView"
+            android:gravity="right|center_vertical"
+            android:background="@drawable/ic_remove_white_48dp" />
+        <Button
+            android:id="@+id/quantityIncrementButton"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:gravity="right|center_vertical"
+            android:layout_toRightOf="@+id/quantityDecrementButton"
+            android:background="@drawable/ic_add_white_48dp" />
+    </RelativeLayout>
 </LinearLayout>
