--- a/BarBot/Droid/Resources/layout/ListViewRow.axml
+++ b/BarBot/Droid/Resources/layout/ListViewRow.axml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/listview_row"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:textColor="@color/text_white"
-    android:textSize="26dp"
-    android:paddingLeft="10dp"
-    android:paddingTop="7dp"
-    android:paddingBottom="7dp"
-    fontPath="fonts/Microsoft-Yi-Baiti.ttf" />
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+		android:id="@+id/listview_row"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:paddingLeft="10dp"
+	    android:paddingTop="7dp"
+	    android:paddingBottom="7dp"
+		android:descendantFocusability="blocksDescendants">
+	<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+	    android:id="@+id/listview_textview"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:textColor="@color/text_white"
+	    android:textSize="26dp"
+	    fontPath="fonts/Microsoft-Yi-Baiti.ttf" />
+	<Button
+	    android:id="@+id/listview_removebutton"
+	    android:layout_width="35dp"
+        android:layout_height="35dp"
+	    android:layout_alignParentRight="true"
+	    android:layout_centerVertical="true"
+	    android:layout_marginRight="5dp"
+	    android:background="@drawable/ic_clear_white_48dp" /> 
+</RelativeLayout>
