*** FULL STEAM AHEAD BOYZ CHOO CHOO *** Started refactoring UWP - Updated WebSocket code to work with WS Server changes and previous Core refactoring - Added actual pages for each page instead of using user controls - Added navigation animations for page transitions - Fixed issue with parsing empty json arrays

--- a/BarBot/BarBot.UWP/MainPage.xaml
+++ b/BarBot/BarBot.UWP/MainPage.xaml
@@ -8,6 +8,12 @@
     mc:Ignorable="d">
 
     <Grid Background="#FF131313">
-        <Frame Name="ContentFrame" x:FieldModifier="public"></Frame>
+        <Frame Name="ContentFrame" x:FieldModifier="public">
+            <Frame.ContentTransitions>
+                <TransitionCollection>
+                    <NavigationThemeTransition />
+                </TransitionCollection>
+            </Frame.ContentTransitions>
+        </Frame>
     </Grid>
 </Page>
