--- a/BarBot/BarBot.UWP/Pages/PartyMode.xaml
+++ b/BarBot/BarBot.UWP/Pages/PartyMode.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="BarBot.UWP.UserControls.Uc_PartyMode"
+    x:Class="BarBot.UWP.Pages.PartyMode"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:BarBot.UWP.UserControls"
+    xmlns:local="using:BarBot.UWP.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
