--- a/BarBot/BarBot.UWP/Pages/RecipeDetail.xaml
+++ b/BarBot/BarBot.UWP/Pages/RecipeDetail.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="BarBot.UWP.Pages.DrinkDetail"
+    x:Class="BarBot.UWP.Pages.RecipeDetail"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:BarBot.UWP.Pages"
