--- a/BarBot/BarBot.UWP/UserControls/Uc_RecipeDetail.xaml
+++ b/BarBot/BarBot.UWP/UserControls/Uc_RecipeDetail.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="BarBot.UWP.UserControls.Uc_DrinkDetail"
+    x:Class="BarBot.UWP.UserControls.Uc_RecipeDetail"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:BarBot.UWP.UserControls"
