--- a/BarBot/BarBot.UWP/Pages/Menu.xaml
+++ b/BarBot/BarBot.UWP/Pages/Menu.xaml
@@ -37,6 +37,13 @@
                 </Style>
             </TextBox.Resources>
         </TextBox>
+        <Button HorizontalAlignment="Right" VerticalAlignment="Top" Height="79" Width="84" Click="Open_Settings" Margin="0,10,0,0" Background="{x:Null}" ExitDisplayModeOnAccessKeyInvoked="False" UseSystemFocusVisuals="False" AllowFocusOnInteraction="False">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Image Width="84" Height="70" Source="ms-appx:///Assets/Plus_Icon.png" Margin="0,0,17,0"/>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
         <uc:Uc_RecipeList x:Name="RecipeList" Visibility="Collapsed"></uc:Uc_RecipeList>
         <uc:Uc_CategoryList x:Name="CategoryList"></uc:Uc_CategoryList>
     </Grid>
