--- a/BarBot/BarBot.UWP/Pages/Menu.xaml
+++ b/BarBot/BarBot.UWP/Pages/Menu.xaml
@@ -37,10 +37,10 @@
                 </Style>
             </TextBox.Resources>
         </TextBox>
-        <Button HorizontalAlignment="Right" VerticalAlignment="Top" Height="79" Width="84" Click="Open_Settings" Margin="0,10,0,0" Background="{x:Null}" ExitDisplayModeOnAccessKeyInvoked="False" UseSystemFocusVisuals="False" AllowFocusOnInteraction="False">
+        <Button HorizontalAlignment="Right" VerticalAlignment="Top" Height="79" Width="84" Click="Open_Settings" Margin="0,10,20,0" Background="{x:Null}" ExitDisplayModeOnAccessKeyInvoked="False" UseSystemFocusVisuals="False" AllowFocusOnInteraction="False">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
-                    <Image Width="84" Height="70" Source="ms-appx:///Assets/Plus_Icon.png" Margin="0,0,17,0"/>
+                    <Image Width="84" Height="75" Source="ms-appx:///Assets/settings.png" Margin="0,0,0,0"/>
                 </ControlTemplate>
             </Button.Template>
         </Button>
