--- a/BarBot/BarBot.UWP/UserControls/ContainerPanel/Uc_ContainerList.xaml
+++ b/BarBot/BarBot.UWP/UserControls/ContainerPanel/Uc_ContainerList.xaml
@@ -1,20 +1,27 @@
 ﻿<UserControl
-    x:Class="BarBot.UWP.UserControls.Uc_ContainerList"
+    x:Class="BarBot.UWP.UserControls.ContainerPanel.Uc_ContainerList"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:BarBot.UWP.UserControls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <Grid Name="MainGrid" Height="1080" Width="1920">
-        <Grid Height="900" Width="1820" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="50,50,50,50">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ContainerPanelStyles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
+
+    <Grid Name="ContainerListMainGrid" Style="{StaticResource ContainerListMainGridStyle}">
+        <Grid Name="ContainerListWrapperGrid" Style="{StaticResource ContainerListWrapperGridStyle}">
             <ItemsControl Name="icContainerItems" ItemsSource="{Binding}">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
-                        <Grid Margin="0,30,0,0">
+                        <Grid Name="ContainerListIcGrid" Style="{StaticResource ContainerListIcGridStyle}">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition></ColumnDefinition>
                                 <ColumnDefinition></ColumnDefinition>
