--- a/BarBot/BarBot.UWP/UserControls/ContainerPanel/ContainerPanelStyles.xaml
+++ b/BarBot/BarBot.UWP/UserControls/ContainerPanel/ContainerPanelStyles.xaml
@@ -44,109 +44,103 @@
 
     <!-- Container Tile -->
 
-    <Style x:Key="ContainerTileCanvasStyle"
-               TargetType="Canvas">
+    <Style x:Key="ContainerTileButtonStyle"
+               TargetType="Button">
         <Setter Property="Margin"
                     Value="10,10,10,10" />
+        <Setter Property="HorizontalAlignment"
+                    Value="Center" />
+    </Style>
+
+    <Style x:Key="ContainerTileStackPanelStyle"
+           TargetType="StackPanel">
         <Setter Property="Background"
-                    Value="{StaticResource TileColor}" />
+                Value="{StaticResource TileColor}" />
+        <Setter Property="Height"
+                Value="205" />
+        <Setter Property="Width"
+                Value="435" />
     </Style>
 
     <Style x:Key="ContainerNumberTextBlockStyle"
                TargetType="TextBlock">
         <Setter Property="Foreground"
-                    Value="{StaticResource TextColor}" />
+                Value="{StaticResource TextColor}" />
         <Setter Property="FontFamily"
-                    Value="Microsoft Yi Baiti" />
+                Value="Microsoft Yi Baiti" />
         <Setter Property="FontSize"
-                    Value="36" />
-        <Setter Property="Canvas.ZIndex"
-                    Value="70" />
-        <Setter Property="Canvas.Left"
-                    Value="10" />
-        <Setter Property="Canvas.Top"
-                    Value="10" />
+                Value="40" />
+        <Setter Property="Margin"
+                Value="10,0,0,0" />
         <Setter Property="Height"
-                    Value="auto" />
+                Value="auto" />
         <Setter Property="Width"
-                    Value="auto" />
+                Value="auto" />
         <Setter Property="TextAlignment"
-                    Value="Center" />
-    </Style>
-
-    <Style x:Key="ContainerTileButtonStyle"
-               TargetType="Button">
-        <Setter Property="Canvas.ZIndex"
-                    Value="90" />
-        <Setter Property="Canvas.Left"
-                    Value="100" />
-        <Setter Property="Canvas.Top"
-                    Value="50" />
-        <Setter Property="HorizontalAlignment"
-                    Value="Center" />
+                Value="Left" />
     </Style>
 
     <Style x:Key="IngredientNameTextBlockStyle"
                TargetType="TextBlock">
         <Setter Property="Foreground"
-                    Value="{StaticResource TextColor}" />
+                Value="{StaticResource TextColor}" />
         <Setter Property="FontFamily"
-                    Value="Microsoft Yi Baiti" />
+                Value="Microsoft Yi Baiti" />
         <Setter Property="FontSize"
-                    Value="40" />
+                Value="56" />
         <Setter Property="Height"
-                    Value="auto" />
+                Value="auto" />
         <Setter Property="Width"
-                    Value="auto" />
+                Value="auto" />
+        <Setter Property="Margin"
+                Value="0,15,0,0" />
         <Setter Property="TextAlignment"
-                    Value="Center" />
+                Value="Center" />
         <Setter Property="TextTrimming"
-                    Value="CharacterEllipsis" />
+                Value="CharacterEllipsis" />
         <Setter Property="TextWrapping"
-                    Value="WrapWholeWords" />
+                Value="WrapWholeWords" />
+    </Style>
+
+    <Style x:Key="ContainerVolumeStackPanelStyle"
+           TargetType="StackPanel">
+        <Setter Property="Width"
+                Value="auto" />
+        <Setter Property="Orientation"
+                Value="Horizontal" />
+        <Setter Property="HorizontalAlignment"
+                Value="Center" />
+        <Setter Property="Margin"
+                Value="0,10,0,0" />
     </Style>
 
     <Style x:Key="ContainerCurrentVolumeTextBlockStyle"
                TargetType="TextBlock">
         <Setter Property="Foreground"
-                    Value="{StaticResource TextColor}" />
+                Value="{StaticResource TextColor}" />
         <Setter Property="FontFamily"
-                    Value="Microsoft Yi Baiti" />
+                Value="Microsoft Yi Baiti" />
         <Setter Property="FontSize"
-                    Value="36" />
-        <Setter Property="Canvas.ZIndex"
-                    Value="70" />
-        <Setter Property="Canvas.Left"
-                    Value="100" />
-        <Setter Property="Canvas.Top"
-                    Value="100" />
+                Value="52" />
         <Setter Property="Height"
-                    Value="auto" />
-        <Setter Property="Width"
-                    Value="auto" />
+                Value="auto" />
         <Setter Property="TextAlignment"
-                    Value="Center" />
+                Value="Right" />
     </Style>
 
     <Style x:Key="ContainerMaxVolumeTextBlockStyle"
                TargetType="TextBlock">
         <Setter Property="Foreground"
-                    Value="{StaticResource TextColor}" />
+                Value="{StaticResource TextColor}" />
         <Setter Property="FontFamily"
-                    Value="Microsoft Yi Baiti" />
+                Value="Microsoft Yi Baiti" />
         <Setter Property="FontSize"
-                    Value="36" />
-        <Setter Property="Canvas.ZIndex"
-                    Value="71" />
-        <Setter Property="Canvas.Left"
-                    Value="160" />
-        <Setter Property="Canvas.Top"
-                    Value="100" />
+                Value="52" />
         <Setter Property="Height"
-                    Value="auto" />
+                Value="auto" />
         <Setter Property="Width"
-                    Value="auto" />
+                Value="auto" />
         <Setter Property="TextAlignment"
-                    Value="Center" />
+                Value="Center" />
     </Style>
 </ResourceDictionary>
