--- a/BarBot/BarBot.UWP/Pages/ContainerPanel.xaml
+++ b/BarBot/BarBot.UWP/Pages/ContainerPanel.xaml
@@ -4,24 +4,15 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:BarBot.UWP.Pages"
     xmlns:uc="using:BarBot.UWP.UserControls.ContainerPanel"
+    xmlns:ab="using:BarBot.UWP.UserControls.AppBar"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Width="1920"
-    Height="1080">
+    Width="1280"
+    Height="720">
 
     <Grid>
-        <Border BorderBrush="#004b99" BorderThickness="0,0,0,5" VerticalAlignment="Top">
-            <Rectangle Fill="#222222" HorizontalAlignment="Left" Height="95" VerticalAlignment="Top" Width="1920"/>
-        </Border>
-        <Button HorizontalAlignment="Left" VerticalAlignment="Top" Height="79" Width="84" Click="NavigateBack" Margin="0,10,0,0" Background="{x:Null}" ExitDisplayModeOnAccessKeyInvoked="False" UseSystemFocusVisuals="False" AllowFocusOnInteraction="False">
-            <Button.Template>
-                <ControlTemplate TargetType="Button">
-                    <Image Width="84" Height="70" Source="ms-appx:///Assets/back_arrow.png" Margin="0,0,17,0"/>
-                </ControlTemplate>
-            </Button.Template>
-        </Button>
-        <TextBlock x:Name="menuTitle" Foreground="White" HorizontalAlignment="Left" Height="95" Canvas.Left="50" TextWrapping="Wrap" Text="CONTAINERS" VerticalAlignment="Top" Width="594" FontFamily="Microsoft Yi Baiti" FontSize="100" Canvas.ZIndex="50" SelectionHighlightColor="{x:Null}" Margin="70,-10,0,0"/>
+        <ab:AppBar x:Name="AppBar"></ab:AppBar>
         <uc:Uc_ContainerList x:Name="ContainerList"></uc:Uc_ContainerList>
     </Grid>
 </Page>
