--- a/BarBot/BarBot.UWP/UserControls/Uc_RecipeList.xaml
+++ b/BarBot/BarBot.UWP/UserControls/Uc_RecipeList.xaml
@@ -6,25 +6,25 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    d:DesignHeight="1080"
-    d:DesignWidth="1920">
+    d:DesignHeight="720"
+    d:DesignWidth="1280">
 
-    <Grid Height="1080" Width="1920">
-        <Canvas Name="recipeTileCanvas" Height="970" Width="1640" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="140,100,140,10"></Canvas>
+    <Grid Height="720" Width="1280">
+        <Canvas Name="recipeTileCanvas" Height="650" Width="1110" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,100,0,0"></Canvas>
 
-        <Button x:Name="BackButton" Click="Previous_Page"  HorizontalAlignment="Left" Height="323" Margin="35,303,0,0" VerticalAlignment="Top" Width="186">
+        <Button x:Name="BackButton" Click="Previous_Page"  HorizontalAlignment="Left" Height="230" Margin="0,240,20,200" VerticalAlignment="Top" Width="120">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
-                    <Image x:Name="BackButtonImg" Stretch="None" Source="ms-appx:///Assets/BackButton.png"/>
+                    <Image x:Name="BackButtonImg" Stretch="Uniform" Source="ms-appx:///Assets/BackButton.png"/>
                 </ControlTemplate>
             </Button.Template>
         </Button>
         <!--<Image x:Name="BackButton" Stretch="None" Source="ms-appx:///Assets/BackButton.png"/>-->
 
-        <Button x:Name="NextButton" Click="Next_Page" HorizontalAlignment="Right" Height="323" Margin="0,303,45,0" VerticalAlignment="Top" Width="186">
+        <Button x:Name="NextButton" Click="Next_Page" HorizontalAlignment="Right" Height="230" Margin="0,240,20,200" VerticalAlignment="Top" Width="120">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
-                    <Image x:Name="NextButtonImg" Stretch="None" Source="ms-appx:///Assets/NextButton.png"/>
+                    <Image x:Name="NextButtonImg" Stretch="Uniform" Source="ms-appx:///Assets/NextButton.png"/>
                 </ControlTemplate>
             </Button.Template>
         </Button>
