--- a/BarBot/BarBot.UWP/Pages/Menu.xaml
+++ b/BarBot/BarBot.UWP/Pages/Menu.xaml
@@ -7,8 +7,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Width="1920"
-    Height="1080">
+    Width="1280"
+    Height="720">
 
     <Page.Resources>
         <ResourceDictionary>
@@ -20,7 +20,7 @@
     
     <Grid>
         <Border BorderBrush="#004b99" BorderThickness="0,0,0,5" VerticalAlignment="Top">
-            <Rectangle Fill="#222222" HorizontalAlignment="Left" Height="95" VerticalAlignment="Top" Width="1920"/>
+            <Rectangle Fill="#222222" HorizontalAlignment="Left" Height="95" VerticalAlignment="Top" Width="1280"/>
         </Border>
         <Button HorizontalAlignment="Left" VerticalAlignment="Top" Height="79" Width="84" Click="Back_To_PartyMode" Margin="0,10,0,0" Background="{x:Null}" ExitDisplayModeOnAccessKeyInvoked="False" UseSystemFocusVisuals="False" AllowFocusOnInteraction="False">
             <Button.Template>
@@ -30,7 +30,7 @@
             </Button.Template>
         </Button>
         <TextBlock x:Name="menuTitle" Foreground="White" HorizontalAlignment="Left" Height="95" Canvas.Left="50" TextWrapping="Wrap" Text="MENU" VerticalAlignment="Top" Width="594" FontFamily="Microsoft Yi Baiti" FontSize="100" Canvas.ZIndex="50" SelectionHighlightColor="{x:Null}" Margin="70,-10,0,0"/>
-        <TextBox x:Name="searchTextBox" KeyUp="searchTextBox_KeyUp" Foreground="White" Height="75" Width="1200" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Microsoft Yi Baiti" FontSize="55" Canvas.ZIndex="50" Margin="400,10,0,0" Background="#66000000" FocusVisualSecondaryBrush="Black" PlaceholderText="Search" BorderBrush="#FF424242">
+        <TextBox x:Name="searchTextBox" KeyUp="searchTextBox_KeyUp" Foreground="White" Height="75" Width="700" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Microsoft Yi Baiti" FontSize="55" Canvas.ZIndex="50" Margin="400,10,0,0" Background="#66000000" FocusVisualSecondaryBrush="Black" PlaceholderText="Search" BorderBrush="#FF424242">
             <TextBox.Resources>
                 <Style TargetType="ContentControl">
                     <Setter Property="Foreground" Value="White"/>
@@ -44,7 +44,7 @@
                 </ControlTemplate>
             </Button.Template>
         </Button>
-        <uc:Uc_RecipeList x:Name="RecipeList" Visibility="Collapsed"></uc:Uc_RecipeList>
+        <uc:Uc_RecipeList x:Name="RecipeList" Visibility="Visible"></uc:Uc_RecipeList>
         <uc:Uc_CategoryList x:Name="CategoryList"></uc:Uc_CategoryList>
     </Grid>
 </Page>
