--- a/BarBot/BarBot.UWP/UserControls/Uc_RecipeTile.xaml
+++ b/BarBot/BarBot.UWP/UserControls/Uc_RecipeTile.xaml
@@ -6,19 +6,27 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    d:DesignWidth="390"
-    d:DesignHeight="360">
+    d:DesignWidth="260"
+    d:DesignHeight="240"
+    Height="240"
+    Width="260">
 
     <UserControl.Resources>
         <local:ToUpperConverter x:Name="ToUpperConverter" />
     </UserControl.Resources>
 
-    <Canvas>
-        <!--<Button x:Name="buttonWrapper" Click="Drink_Detail" Width="390"></Button>-->
-        <Button x:Name="imageButton" Click="Drink_Detail" Canvas.Top="0" Canvas.ZIndex="75">
+    <Grid>
+        <Button x:Name="hexTile" Click="Drink_Detail">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
-                    <Image x:Name="recipeImage" Stretch="Uniform" Margin="0,0,0,10" Width="390" Canvas.ZIndex="75">
+                    <Image x:Name="HexBackground"  Stretch="Uniform" Source="ms-appx:///Assets/HexagonTile.png"/>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
+        <Button x:Name="imageButton" Click="Drink_Detail" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Image x:Name="recipeImage" Stretch="Uniform" Height="210" Width="210">
                         <Image.Source>
                             <BitmapImage UriSource="{Binding CachedImage.UriSource}"/>
                         </Image.Source>
@@ -26,37 +34,19 @@
                 </ControlTemplate>
             </Button.Template>
         </Button>
-        <Button x:Name="hexGradient" Click="Drink_Detail" Canvas.Top="0" Canvas.ZIndex="79">
+        <Button x:Name="hexGradient" Click="Drink_Detail" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
-                    <Image Stretch="Uniform"  Source="ms-appx:///Assets/HexagonTileGradient.png" Width="370" Canvas.ZIndex="80"/>
+                    <Image Stretch="Uniform"  Source="ms-appx:///Assets/HexagonTileGradient.png" Width="210" Height="210"/>
                 </ControlTemplate>
             </Button.Template>
         </Button>
-        <!--<Grid x:Name="recipeNameGrid" Canvas.Top="0" Canvas.Left="0" Width="320" Background="Transparent" Canvas.ZIndex="50" HorizontalAlignment="Center" VerticalAlignment="Center">-->
-            <!--<Grid.Resources>
-                <local:ToUpperConverter x:Name="ToUpperConverter" />
-            </Grid.Resources>-->
-            
-            <Button x:Name="textButtonWrapper" x:FieldModifier="public" Click="Drink_Detail" HorizontalAlignment="Center" Canvas.ZIndex="90">
-                <Button.Template>
-                    <ControlTemplate TargetType="Button">
-                        <TextBlock Text="{Binding Path=Recipe.Name, Converter={StaticResource ToUpperConverter}}" Height="auto" MaxHeight="200" Width="auto" MaxWidth="342" TextWrapping="WrapWholeWords" FontFamily="Microsoft Yi Baiti" FontSize="50" Foreground="#FFE6E1E1" Canvas.ZIndex="99" HorizontalAlignment="Center" VerticalAlignment="Center" TextTrimming="CharacterEllipsis"></TextBlock>
-                    </ControlTemplate>
-                </Button.Template>
-            </Button>
-        <!--</Grid>-->
-        <Button x:Name="buttonWrapper" x:FieldModifier="public" Click="Drink_Detail" Width="390" Background="Black" Canvas.ZIndex="50">
+        <Button x:Name="recipeName" Click="Drink_Detail" Height="240" Width="250">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
-                    <Path x:Name="hexagon" x:FieldModifier="public" Stroke="#FF222222" StrokeThickness="8" Width="390" Loaded="hexagon_Loaded" Fill="Black">
-                        <!--<Path.Fill>
-                            <ImageBrush Stretch="Uniform" ImageSource="{Binding Path=Recipe.Img}" Opacity="0.8"/>
-                        </Path.Fill>-->
-                    </Path>
+                    <TextBlock Text="{Binding Path=Recipe.Name, Converter={StaticResource ToUpperConverter}}" Height="auto" MaxHeight="200" Width="auto" MaxWidth="240" TextWrapping="WrapWholeWords" FontFamily="Microsoft Yi Baiti" FontSize="35" Foreground="White" Canvas.ZIndex="999" HorizontalAlignment="Center" VerticalAlignment="Center" TextTrimming="CharacterEllipsis"></TextBlock>
                 </ControlTemplate>
             </Button.Template>
         </Button>
-
-    </Canvas>
+    </Grid>
 </UserControl>
