--- a/BarBot/BarBot.UWP/Pages/Menu.xaml
+++ b/BarBot/BarBot.UWP/Pages/Menu.xaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:BarBot.UWP.Pages"
     xmlns:uc="using:BarBot.UWP.UserControls"
+    xmlns:ab="using:BarBot.UWP.UserControls.AppBar"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -17,33 +18,21 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Page.Resources>
-    
+
     <Grid>
-        <Border BorderBrush="#004b99" BorderThickness="0,0,0,5" VerticalAlignment="Top">
-            <Rectangle Fill="#222222" HorizontalAlignment="Left" Height="95" VerticalAlignment="Top" Width="1280"/>
-        </Border>
-        <Button HorizontalAlignment="Left" VerticalAlignment="Top" Height="79" Width="84" Click="Back_To_PartyMode" Margin="0,10,0,0" Background="{x:Null}" ExitDisplayModeOnAccessKeyInvoked="False" UseSystemFocusVisuals="False" AllowFocusOnInteraction="False">
-            <Button.Template>
-                <ControlTemplate TargetType="Button">
-                    <Image Width="84" Height="70" Source="ms-appx:///Assets/back_arrow.png" Margin="0,0,17,0"/>
-                </ControlTemplate>
-            </Button.Template>
-        </Button>
-        <TextBlock x:Name="menuTitle" Foreground="White" HorizontalAlignment="Left" Height="95" Canvas.Left="50" TextWrapping="Wrap" Text="MENU" VerticalAlignment="Top" Width="594" FontFamily="Microsoft Yi Baiti" FontSize="100" Canvas.ZIndex="50" SelectionHighlightColor="{x:Null}" Margin="70,-10,0,0"/>
-        <TextBox x:Name="searchTextBox" KeyUp="searchTextBox_KeyUp" Foreground="White" Height="75" Width="700" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Microsoft Yi Baiti" FontSize="55" Canvas.ZIndex="50" Margin="400,10,0,0" Background="#66000000" FocusVisualSecondaryBrush="Black" PlaceholderText="Search" BorderBrush="#FF424242">
+        <ab:AppBar x:Name="AppBar" 
+                   Title="Menu"
+                   BackButtonVisible="False"
+                   FilterButtonVisible="True"
+                   SearchButtonVisible="True"
+                   SettingsButtonVisible="True"></ab:AppBar>
+        <!--<TextBox x:Name="searchTextBox" KeyUp="searchTextBox_KeyUp" Foreground="White" Height="75" Width="700" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Microsoft Yi Baiti" FontSize="55" Canvas.ZIndex="50" Margin="400,10,0,0" Background="#66000000" FocusVisualSecondaryBrush="Black" PlaceholderText="Search" BorderBrush="#FF424242">
             <TextBox.Resources>
                 <Style TargetType="ContentControl">
                     <Setter Property="Foreground" Value="White"/>
                 </Style>
             </TextBox.Resources>
-        </TextBox>
-        <Button HorizontalAlignment="Right" VerticalAlignment="Top" Height="79" Width="84" Click="Open_Settings" Margin="0,10,20,0" Background="{x:Null}" ExitDisplayModeOnAccessKeyInvoked="False" UseSystemFocusVisuals="False" AllowFocusOnInteraction="False">
-            <Button.Template>
-                <ControlTemplate TargetType="Button">
-                    <Image Width="84" Height="75" Source="ms-appx:///Assets/settings.png" Margin="0,0,0,0"/>
-                </ControlTemplate>
-            </Button.Template>
-        </Button>
+        </TextBox>-->
         <uc:Uc_RecipeList x:Name="RecipeList" Visibility="Visible"></uc:Uc_RecipeList>
         <uc:Uc_CategoryList x:Name="CategoryList"></uc:Uc_CategoryList>
     </Grid>
